first dump of db
- basic configs
- basic workflow
- backup of db?

--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -27,7 +27,7 @@
         <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
         <meta name="msapplication-TileColor" content="#ffffff">
         <meta name="theme-color" content="#ffffff">
-        {# <link rel="stylesheet" href="{{ mix('css/main.css') }}"> #}
+        <link rel="stylesheet" href="{{ mix('css/main.css') }}">
 	</head>
     {# <body class="js-loading" x-data="{ modalOpen: false }" :class="{ 'Modal--open': modalOpen == true}"> #}
     <body class="js-loading" >
@@ -51,7 +51,7 @@
             {# Load external JS files or inline JS here #}
         {% endblock %}
         
-        {# <script src="{{ mix('js/app.js') }}"></script> #}
+        <script src="{{ mix('js/app.js') }}"></script>
 
     </body>
 </html>
